Добавлена функциональность по посчету комментариев